# sweetsite

./: .gitignore  Makefile  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml
sweetsite/: asgi.py  settings.py  urls.py  wsgi.py
theme/templates/: base.html
theme/templates/websites/: base.html  index.html
websites/: views.py
