[tool.poetry]
name = "sweetsite"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
Django = "^4.0"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
django-tailwind = "^3.1.1"
django-browser-reload = "^1.3.0"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
